add authentication checks to all credentials endpoints